--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -6,3 +6,13 @@ body{
     display: block;
     text-align: center;
 }
+
+h1{
+    margin: 0;
+}
+
+p{
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 10px;
+}
